@@ -33,6 +33,7 @@
 #include "ppi.h"
 #include "pgm.h"
 #include "stk500.h"
+#include "avr910.h"
 #include "avr.h"
 
 extern char * progname;
@@ -101,6 +102,7 @@ static int parse_cmdbits(OPCODE * op);
 %token K_SCK
 %token K_SIZE
 %token K_STK500
+%token K_AVR910
 %token K_TYPE
 %token K_VCC
 %token K_VFYLED
@@ -281,6 +283,12 @@ prog_parm :
   K_TYPE TKN_EQUAL K_STK500 {
     { 
       stk500_initpgm(current_prog);
+    }
+  } |
+
+  K_TYPE TKN_EQUAL K_AVR910 {
+    { 
+      avr910_initpgm(current_prog);
     }
   } |
 
